cic2026/assets/css/header-v2.css
/* ... */
/*Space Effect inside the container to avoid scroll bar*/
@media (min-width: 737px) and (max-width: 991px) {
	.header-v2 .mega-menu .mega-menu-content .container {
		width: 690px !important;
	}

	.header-v2 .mega-menu .equal-height {
		margin-right: 0;
	}

	.header-v2 .mega-menu .equal-height-in {
    	padding-right: 0;
    	margin-right: -15px;
    }
}

@media (max-width: 991px) {
	.header-v2 .mega-menu .equal-height {
		margin-right: 0;
	}

	.header-v2 .mega-menu .equal-height-in {
    	padding-right: 0;
    }
}

/*Equal Hight List Style*/
@media (max-width: 991px) {
    .header-v2 .mega-menu .dropdown.mega-menu-fullwidth .dropdown-menu {
        width: auto;
    }

    .header-v2 .mega-menu .equal-height-in,
    .header-v2 .mega-menu .equal-height-list {
        display: block;
    }

    .header-v2 .mega-menu .mega-menu-fullwidth .dropdown-menu > li > ul {
        display: block;
    }

    /*Equal Height List Style*/
    .header-v2 .mega-menu .equal-height-list h3 { 
		color: #333; 
		margin: 0 0 5px;
		font-size: 13px; 
		font-weight: 400; 
		padding: 6px 25px 5px; 
		border-bottom: solid 1px #eee;
	}

	.header-v2 .mega-menu .equal-height-list li a {
		color: #687074;
		display: block;
		font-size: 13px; 
		font-weight: 400; 
		margin-left: 15px;
		padding: 6px 25px; 
		border-bottom: solid 1px #eee;
	}

	.header-v2 .mega-menu .equal-height-list > h3.active,
	.header-v2 .mega-menu .equal-height-list > .active > a,
	.header-v2 .mega-menu .equal-height-list > .active > a:hover,
	.header-v2 .mega-menu .equal-height-list > .active > a:focus {
		color: #555;
		background-color: #e7e7e7;
	}

	.header-v2 .mega-menu .equal-height-list li a:hover {
		color: #333;
		text-decoration: none;
	}
}


/*--------------------------------------------------
    [6. Header - Dark Option]
----------------------------------------------------*/

/*Header*/
.header-fixed .header-v2 {
	height: 0;
}

.header-fixed .header-v2.header-fixed-shrink {
	top: 0;
	left: 0;
	width: 100%;
	height: 93px;
	z-index: 9999;
	position: fixed;
	margin-top: -35px;
	border-bottom: none;
	box-shadow: 0 0 3px #bbb;
	background: rgba(255,255,255, 0.96); 
}

/*Topbar v2*/
.header-fixed .header-v2.header-fixed-shrink .topbar-v2 {
	display: none;
}

/*Brand*/
.header-fixed .header-v2.header-fixed-shrink .navbar-brand { 
	top: 38px;
	z-index: 1;
	position: relative;
	padding: 0 10px 10px 15px;
}

.header-fixed .header-v2.header-fixed-shrink .navbar-brand img {
	width:150px;
	-webkit-filter: brightness(100%);
	filter: brightness(100%);
}

/*Navbar*/
.header-fixed .header-v2.header-fixed-shrink .navbar {
	margin-top: 0;
}

.header-fixed .header-v2.header-fixed-shrink .active a {
	border-bottom: none !important;
}

@media (max-width: 991px) {
	/*Header*/
	.header-fixed .header-v2,
	.header-fixed .header-v2.header-fixed-shrink {
		height: inherit;
		position: relative;
	}
}

@media (min-width: 992px) {
	.header-fixed .header-v2.header-fixed-shrink .navbar-nav > li > a {
		color: #777;
		margin-top: 25px;
		padding: 21px 30px 17px 20px;
		border-bottom: solid 1px transparent !important;
		-webkit-transition: color 0.2s ease-in-out;
		-moz-transition: color 0.2s ease-in-out;
		-o-transition: color 0.2s ease-in-out;
		transition: color 0.2s ease-in-out;		
	}

	.header-fixed .header-v2.header-fixed-shrink .navbar-nav > .active > a:hover {
		color: #777;
	}

	.header-fixed .header-v2.header-fixed-shrink .dropdown > a:after {
		top: 22px;
	}
}

